--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "morgan": "^1.10.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "morgan": "^1.10.0",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
